--- a/src/components/Cell/styles.css
+++ b/src/components/Cell/styles.css
@@ -1,20 +1,23 @@
 .Cell {
   background-color: lightskyblue;
-  width: 50px;
-  height: 50px;
+  width: 25%;
+  height: 25%;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 24px;
   font-weight: 700;
-  border-radius: 5px;
-  margin: 5px;
+  border-radius: 8px;
+  border: solid 4px white;
   color: white;
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.15);
   position: absolute;
   cursor: pointer;
   user-select: none;
-  /*transition: all 0.1s ease-in-out;*/
+  box-sizing: border-box;
+  transition: all 0.1s ease-in-out;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 .Cell:hover {
