--- a/src/components/Grid/styles.css
+++ b/src/components/Grid/styles.css
@@ -1,9 +1,15 @@
 .Grid {
-  width: 240px;
-  height: 240px;
+  width: 300px;
+  height: 300px;
   position: relative;
   border: solid 3px lightskyblue;
   border-radius: 5px;
   margin: auto;
-  margin-top: 40px;
+}
+
+@media screen and (max-width: 600px) {
+  .Grid {
+    width: 250px;
+    height: 250px;
+  }
 }
